[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interface/Menus/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://Interface/Assets/retro-pixel-thick.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=3]
[ext_resource path="res://Interface/Assets/ButtonSounds.gd" type="Script" id=4]
[ext_resource path="res://Hats/TopHat/dimmadont.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 186.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 105.0
margin_top = 60.0
margin_right = 195.0
margin_bottom = 125.0

[node name="WinText" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "You Won!"
align = 1

[node name="CashText" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 90.0
margin_bottom = 38.0
theme = ExtResource( 3 )
text = "With $100"
align = 1

[node name="Padding" type="Control" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 90.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 3 )

[node name="PlayAgain" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 90.0
margin_bottom = 65.0
rect_min_size = Vector2( 90, 0 )
text = "Hooray"
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 30 )

[node name="Hat" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 8

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/Hat"]
margin_left = 15.0
margin_top = 15.0
margin_right = 15.0
margin_bottom = 15.0

[node name="HatSprite" type="Sprite" parent="VBoxContainer/HBoxContainer/Hat/Control"]
unique_name_in_owner = true
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 6

[node name="TimeText" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 34.0
margin_top = 16.0
margin_right = 300.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 8
text = "20:00"
align = 2
valign = 2

[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
